--- a/src/components/HomePage.module.css
+++ b/src/components/HomePage.module.css
@@ -2,6 +2,35 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100vw;
     height: 100vh;
+    background-color: rgba(54, 57, 63, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.chatRooms {
+    display: flex;
+    flex-direction: column;
+
+}
+.chatRooms a {
+    text-decoration: none;
+    margin-top: 20px;
+    margin-left: 30px;
+    color: rgba(195,51,100,1);
+    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 800;
+    letter-spacing: 1.3px;
+    transition: all 0.3s ease;
+    width: fit-content;
+}
+.chatRooms a::before {
+    content: '#';
+}
+.chatRooms a:hover {
+    margin-left: 20px;
+    color:rgba(177, 177, 177, 1) ;
 }
