--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -45,7 +45,7 @@
 
 .createChatRoom {
     display: flex;
-    
+
 }
 
 .logOut {
@@ -72,4 +72,71 @@
     margin-top: 20px;
     letter-spacing: 1.3px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.createBtn {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    border: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: 800;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    caret-color: transparent;
+    background-color: rgb(221, 221, 221);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.createBtn::after {
+    position: absolute;
+    content: '';
+    transform: rotate(90deg);
+    top: 0;
+    width: 4px;
+    background-color: rgb(255, 50, 108);
+    height: 50px;
+    border: none;
+}
+
+.createBtn::before {
+    position: absolute;
+    top: 0;
+    content: '';
+    width: 4px;
+    background-color: rgb(255, 50, 108);
+    height: 50px;
+    border: none;
+}
+
+.createBtn:hover {
+    transform: scale(1.1);
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    font-size: 1rem;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    left: 120%;
+    top: 0;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
