--- a/src/components/HomePage.module.css
+++ b/src/components/HomePage.module.css
@@ -34,3 +34,11 @@
     margin-left: 20px;
     color:rgba(177, 177, 177, 1) ;
 }
+
+@media screen and (max-width:574px) {
+    .homePageWrapper {
+        margin-top: 40px;
+        padding-top: 30px;
+        justify-content: flex-start;
+    }
+}
