--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    max-height: 80px;
     background-color: white;
     box-shadow: 0px 1px 22px 1px rgba(161, 161, 161, 0.5);
     z-index: 1000;
@@ -32,7 +33,6 @@
     font-size: 1.3rem;
     text-transform: uppercase;
     text-decoration: none;
-    margin-top: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
 
